完成了注册功能

--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
-    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/login.css">
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
@@ -13,8 +12,8 @@
     <label for="password">密码:</label>
     <input type="password" id="password" name="password" />
     <br/>
-    <button type="submit" id="btn_login">登录</button>
+    <button id="btn_register">注册</button>
     <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
-    <script type="text/javascript" src="page_handler.py?page=js/login.js"></script>
+    <script type="text/javascript" src="page_handler.py?page=js/register.js"></script>
   </body>
 </html>
