修改了登录和注册的界面

--- a/html/login.html
+++ b/html/login.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
-    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/login.css">
+    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/common.css">
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
-    <label for="username">账号:</label>
-    <input type="text" id="username" name="username" />
-    <br/>
-    <label for="password">密码:</label>
-    <input type="password" id="password" name="password" />
-    <br/>
-    <button type="submit" id="btn_login">登录</button>
+    <p>
+      <label for="username">账号:</label>
+      <input type="text" id="username" name="username" />
+    </p>
+    <p>
+      <label for="password">密码:</label>
+      <input type="password" id="password" name="password" />
+    </p>
+    <p>
+      <button type="submit" id="btn_login">登录</button>
+    </p>
     <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
     <script type="text/javascript" src="page_handler.py?page=js/login.js"></script>
   </body>
