添加了页面间的跳转链接

--- a/html/login.html
+++ b/html/login.html
@@ -18,6 +18,9 @@
     <p>
       <button type="submit" id="btn_login">登录</button>
     </p>
+    <p>
+      <a href="page_handler.py?page=html/register.html">注册</a>
+    </p>
     <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
     <script type="text/javascript" src="page_handler.py?page=js/login.js"></script>
   </body>
