--- a/html/register.html
+++ b/html/register.html
@@ -18,6 +18,9 @@
     <p>
       <button id="btn_register">注册</button>
     </p>
+    <p>
+      <a href="page_handler.py?page=html/login.html">登录</a>
+    </p>
     <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
     <script type="text/javascript" src="page_handler.py?page=js/register.js"></script>
   </body>
