前端添加了账号和密码的格式验证 账号：字母、数字、下划线组成，字母开头，6-16位 密码：字母和数字组成，且必须同时含有大小写字母和数字，6-12位

--- a/html/info.html
+++ b/html/info.html
@@ -7,14 +7,8 @@
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
-    <p>
-      <label>%s</label>
-    </p>
-    <p>
-      <a href="page_handler.py?page=html/upload_avatar.html">返回头像上传页面</a>
-    </p>
-    <p>
-      <a href="logout.py">退出登录</a>
-    </p>
+    <p><label>%s</label></p>
+    <p><a href="page_handler.py?page=html/upload_avatar.html">返回头像上传页面</a></p>
+    <p><a href="logout.py">退出登录</a></p>
   </body>
 </html>
