--- a/html/upload_avatar.html
+++ b/html/upload_avatar.html
@@ -7,20 +7,14 @@
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
-    <p>
-      <img src="avatar.py" alt="头像" title="头像">
-    </p>
+    <p><img src="avatar.py" alt="头像" title="头像"></p>
     <form enctype="multipart/form-data" action="upload_avatar.py" method="post">
       <p>
         <label for="avatar">头像文件:</label>
         <input type="file" id="avatar" name="avatar" />
       </p>
-      <p>
-        <input type="submit" value="上传" />
-      </p>
+      <p><input type="submit" value="上传" /></p>
     </form>
-    <p>
-      <a href="logout.py">退出登录</a>
-    </p>
+    <p><a href="logout.py">退出登录</a></p>
   </body>
 </html>
