--- a/html/login.html
+++ b/html/login.html
@@ -15,12 +15,8 @@
       <label for="password">密码:</label>
       <input type="password" id="password" name="password" />
     </p>
-    <p>
-      <button type="submit" id="btn_login">登录</button>
-    </p>
-    <p>
-      <a href="page_handler.py?page=html/register.html">注册</a>
-    </p>
+    <p><button type="submit" id="btn_login">登录</button></p>
+    <p><a href="page_handler.py?page=html/register.html">注册</a></p>
     <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
     <script type="text/javascript" src="page_handler.py?page=js/login.js"></script>
   </body>
