修复了一些bug

--- a/html/home.html
+++ b/html/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
-    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/common.css">
+    <link type="text/css" rel="stylesheet" href="page_handler.py?page=common.css">
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
