--- a/html/upload_result.html
+++ b/html/upload_result.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
-    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/common.css">
+    <link type="text/css" rel="stylesheet" href="page_handler.py?page=common.css">
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
     <p><label>%s</label></p>
-    <p><a href="page_handler.py?page=html/upload_avatar.html">返回头像上传页面</a></p>
+    <p><a href="home.py">返回头像上传页面</a></p>
     <p><a href="logout.py">退出登录</a></p>
   </body>
 </html>
