--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
-    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/common.css">
+    <link type="text/css" rel="stylesheet" href="page_handler.py?page=common.css">
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
@@ -16,8 +16,8 @@
       <input type="password" id="password" name="password" />
     </p>
     <p><button type="submit" id="btn_login">登录</button></p>
-    <p><a href="page_handler.py?page=html/register.html">注册</a></p>
-    <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
-    <script type="text/javascript" src="page_handler.py?page=js/login.js"></script>
+    <p><a href="page_handler.py?page=register.html">注册</a></p>
+    <script type="text/javascript" src="page_handler.py?page=common.js"></script>
+    <script type="text/javascript" src="page_handler.py?page=login.js"></script>
   </body>
 </html>
