--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
-    <link type="text/css" rel="stylesheet" href="page_handler.py?page=css/common.css">
+    <link type="text/css" rel="stylesheet" href="page_handler.py?page=common.css">
   </head>
   <body>
     <h2>Yet Another GRAvatar</h2>
@@ -20,8 +20,8 @@
       <label class="tips">(字母和数字组成，且必须同时含有大小写字母和数字，6-12位)</label>
     </p>
     <p><button id="btn_register">注册</button></p>
-    <p><a href="page_handler.py?page=html/login.html">登录</a></p>
-    <script type="text/javascript" src="page_handler.py?page=js/common.js"></script>
-    <script type="text/javascript" src="page_handler.py?page=js/register.js"></script>
+    <p><a href="page_handler.py?page=login.html">登录</a></p>
+    <script type="text/javascript" src="page_handler.py?page=common.js"></script>
+    <script type="text/javascript" src="page_handler.py?page=register.js"></script>
   </body>
 </html>
