修正一些注释错误

--- a/html/redirect.html
+++ b/html/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0;URL=%s">
+    <meta http-equiv="refresh" content="0;url=%s">
     <meta charset="utf-8">
     <title>Yet Another GRAvatar</title>
   </head>
