--- a/html/login.html
+++ b/html/login.html
@@ -16,7 +16,7 @@
       <input type="password" id="password" name="password" />
     </p>
     <p><button type="submit" id="btn_login">登录</button></p>
-    <p><a href="page_handler.py?page=register.html">注册</a></p>
+    <p><a href="register.py">注册</a></p>
     <script type="text/javascript" src="page_handler.py?page=common.js"></script>
     <script type="text/javascript" src="page_handler.py?page=login.js"></script>
   </body>
