--- a/html/register.html
+++ b/html/register.html
@@ -20,7 +20,7 @@
       <label class="tips">(字母和数字组成，且必须同时含有大小写字母和数字，6-12位)</label>
     </p>
     <p><button id="btn_register">注册</button></p>
-    <p><a href="page_handler.py?page=login.html">登录</a></p>
+    <p><a href="login.py">登录</a></p>
     <script type="text/javascript" src="page_handler.py?page=common.js"></script>
     <script type="text/javascript" src="page_handler.py?page=register.js"></script>
   </body>
