--- a/html/upload_result.html
+++ b/html/upload_result.html
@@ -8,7 +8,7 @@
   <body>
     <h2>Yet Another GRAvatar</h2>
     <p><label>%s</label></p>
-    <p><a href="home.py">返回头像上传页面</a></p>
+    <p><a href="upload_avatar.py">返回头像上传页面</a></p>
     <p><a href="logout.py">退出登录</a></p>
   </body>
 </html>
